--- a/sass/components/basic/_logo.scss
+++ b/sass/components/basic/_logo.scss
@@ -9,8 +9,8 @@
   font-size: 26px;
   line-height: 1.19;
   text-transform: capitalize;
-}
 
-.logo span {
-  color: $a_color;
+  span {
+    color: $a_color;
+  }
 }
