--- a/sass/components/home-page/_features.scss
+++ b/sass/components/home-page/_features.scss
@@ -3,61 +3,67 @@
 section.features {
   padding-top: 94px;
   background-color: $p_b_color;
-}
 
-.features ul {
-  display: flex;
-}
+  ul {
+    display: flex;
+  }
 
-.features li + li {
-  margin-left: 30px;
-}
+  li {
+    width: calc((100% - 30px * 3) / 4);
+  }
 
-.features li {
-  width: calc((100% - 30px * 3) / 4);
-}
+  li + li {
+    margin-left: 30px;
+  }
 
-.features h2 {
-  font-size: 0;
-  margin-top: 0;
-}
+  h2 {
+    font-size: 0;
+    margin-top: 0;
+  }
 
-.features h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
+  h3 {
+    margin-top: 0;
+    margin-bottom: 10px;
 
-.features p {
-  font-size: 14px;
-  line-height: 1.71;
-  color: $s_color;
-  margin: 0;
-}
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+  }
 
-.features div.background {
-  background: #f5f4fa;
-  border-radius: 4px;
-  width: 100%;
-  height: 120px;
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  p {
+    margin: 0;
+
+    color: $s_color;
+    font-size: 14px;
+    line-height: 1.71;
+  }
+
+  a {
+    display: block;
+    width: 270px;
+    height: 120px;
+
+    margin-bottom: 30px;
+
+    background-color: #f5f4fa;
+  }
+
+  div.background {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+
+    margin-bottom: 30px;
+
+    background: #f5f4fa;
+    border-radius: 4px;
+  }
 }
 
 .background .icon {
   width: 70px;
   height: 70px;
-}
-
-.features a {
-  display: block;
-  width: 270px;
-  height: 120px;
-  margin-bottom: 30px;
-  background-color: #f5f4fa;
 }
