--- a/sass/components/home-page/_hero.scss
+++ b/sass/components/home-page/_hero.scss
@@ -4,6 +4,7 @@
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.8),
@@ -13,19 +14,19 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cver;
-}
 
-.hero h1 {
-  margin-top: 0px;
-  margin-bottom: 46px;
-  padding-top: 200px;
+  h1 {
+    margin-top: 0px;
+    margin-bottom: 46px;
+    padding-top: 200px;
 
-  color: $p_b_color;
+    color: $p_b_color;
 
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 }
