--- a/sass/components/home-page/_occupation.scss
+++ b/sass/components/home-page/_occupation.scss
@@ -3,36 +3,37 @@
 section.occupation {
   padding-bottom: 94px;
   padding-top: 94px;
-}
 
-.occupation h2 {
-  margin-top: 0;
-  margin-bottom: 50px;
-}
+  h2 {
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
 
-.occupation ul {
-  display: flex;
-  padding: 0;
-}
+  h3 {
+    margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
 
-.occupation li + li {
-  margin-left: 30px;
-}
+    color: $p_b_color;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+  }
 
-.occupation li {
-  width: calc((100% - 30px * 2) / 3);
-  position: relative;
-}
+  ul {
+    display: flex;
+    padding: 0;
+  }
 
-.occupation h3 {
-  color: $p_b_color;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin: 0;
-  padding-top: 27px;
-  padding-bottom: 27px;
+  li {
+    position: relative;
+    width: calc((100% - 30px * 2) / 3);
+  }
+
+  li + li {
+    margin-left: 30px;
+  }
 }
 
 .description {
@@ -41,5 +42,6 @@ section.occupation {
   bottom: 0;
   width: 100%;
   height: 70px;
+
   background: rgba(47, 48, 58, 0.8);
 }
