--- a/sass/components/home-page/_team.scss
+++ b/sass/components/home-page/_team.scss
@@ -3,63 +3,63 @@
 section.team {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: #f5f4fa;
-}
 
-.team h2 {
-  margin-top: 0;
-  margin-bottom: 50px;
+  background-color: #f5f4fa;
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
 }
 
 .card h3 {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
   margin-top: 0;
   margin-bottom: 10px;
   text-align: center;
-}
 
-.card p {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  color: $s_color;
-  margin-top: 0;
-  margin-bottom: 28px;
-  text-align: center;
 }
 
-.card img {
-  margin-bottom: 30px;
-}
-
-.social img {
-  margin-bottom: 0;
-}
-
-.team ul.card {
+.team .card {
   display: flex;
+
+  p {
+    margin-top: 0;
+    margin-bottom: 28px;
+    text-align: center;
+
+    font-size: 16px;
+    line-height: 1.19;
+    color: $s_color;
+  }
+
+  img {
+    margin-bottom: 30px;
+  }
+
+  > li {
+    padding-bottom: 24px;
+    width: calc((100% - 30px * 3) / 4);
+
+    background-color: $p_b_color;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 1px 3px rgba(0, 0, 0, 0.12);
+  }
+
+  li + li {
+    margin-left: 30px;
+  }
 }
 
-.card > li {
-  background-color: $p_b_color;
-  padding-bottom: 24px;
-  width: calc((100% - 30px * 3) / 4);
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
-}
-
-.card li + li {
-  margin-left: 30px;
-}
-
-.social li + li {
-  margin-left: 10px;
-}
-
-.card ul.social {
+.team .social {
   display: flex;
   justify-content: center;
+
+  li + li {
+    margin-left: 10px;
+  }
 }
 
 .social-link {
@@ -68,16 +68,17 @@ section.team {
   height: 44px;
   align-items: center;
   justify-content: center;
+
   border-radius: 50%;
   background-color: $p_b_color;
   fill: #afb1b8;
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-link:hover,
-.social-link:focus {
-  background-color: $a_color;
-  fill: $p_b_color;
+  &:hover,
+  &:focus {
+    background-color: $a_color;
+    fill: $p_b_color;
+  }
 }
